Fix doubling of cursive font on iOS

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ div {
 
 h1 {
     font-family: 'Pacifico', sans-serif;
+    font-weight:normal;
     font-size: 55px;
     margin-top: 0;
     margin-bottom: 25px;
